# vista

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test_vista.py  vista.py
.github/workflows/: create-tagged-image.yml  push-main-to-public.yml
data/: metadata.toml  references.fasta
src/vista/: blast_utils.py  files.py  search.py  vista.py
src/vista/resources/: serogroupMarkers.ndb  serogroupMarkers.nhr  serogroupMarkers.nin  serogroupMarkers.nos  serogroupMarkers.nsq  virulenceClusters.ndb  virulenceClusters.nhr  virulenceClusters.nin  virulenceClusters.nos  virulenceClusters.nsq  virulenceGenes.ndb  virulenceGenes.nhr  virulenceGenes.nin  virulenceGenes.nos  virulenceGenes.nsq
vista/: files.py  io.py  search.py  utils.py  vista_utils.py
